# pytorch-playground

./: DNN_with_Pytorch_Demo_NNMHA.ipynb  playground.ipynb  pyproject.toml
resources/: QC_dataset.csv
src/pytorch-playground/: DNN_with_Pytorch_Demo_NNMHA.ipynb
src/pytorch-playground/2D-3D/: image-to-model.ipynb
src/pytorch-playground/numpy-netwprk/: NN_in_Numpy.ipynb
